mattermost-gke/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app: mattermost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mattermost
  template:
    metadata:
      labels:
        app: mattermost
    spec:
      containers:
        - name: mattermost
          image: mattermost/mattermost-team-edition:latest
          ports:
            - containerPort: 8065
          volumeMounts:
            - name: mattermost-data
              mountPath: /mattermost/data
      volumes:
        - name: mattermost-data
          emptyDir: {}
