mattermost-gke/k8s/cloudsql-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudsql-proxy
  namespace: mattermost
spec:
  selector:
    app: cloudsql-proxy
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
