mattermost-gke/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  namespace: mattermost
  labels:
    app: mattermost
spec:
  type: ClusterIP
  selector:
    app: mattermost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8065
